multi-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: awacs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - app.awacscloud.tech
    secretName: app.awacscloud.tech
  rules:
  - host: app.awacscloud.tech
    http:
      paths:
      - backend:
          serviceName: productservice
          servicePort: 8181
        path: /productservice/
  - host: app.awacscloud.tech
    http:
      paths:
      - backend:
          serviceName: authserver
          servicePort: 8100
        path: /authserver/
  - host: app.awacscloud.tech
    http:
      paths:
      - backend:
          serviceName: socialweb
          servicePort: 9393
        path: /socialweb/
  - host: app.awacscloud.tech
    http:
      paths:
      - backend:
          serviceName: adminserver
          servicePort: 8765
        path: /adminserver/
  - host: app.awacscloud.tech
    http:
      paths:
      - backend:
          serviceName: adminer
          servicePort: 8080
        path: /adminer/
